[package]
name = "beetle-srv"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "beetle"
path = "src/lib.rs"

[[bin]]
name = "beetle-cli"
path = "src/bin/beetle-cli.rs"

[[bin]]
name = "beetle-registrar"
path = "src/bin/beetle-registrar.rs"

[[bin]]
name = "beetle-web"
path = "src/bin/beetle-web.rs"

[dependencies]
dotenv = { version = "^0.15" }
env_logger = { version = "^0.9" }
log = { version = "^0.4" }
uuid = { version = "^1.0", features = ["v4"] }
tide = { version = "^0.16" }
async-std = { version = "^1.0", features = ["attributes"] }
async-tls = { version = "^0.10" }
kramer = { version = "^1.3.1", features = ["kramer-async", "acl"] }
chrono = { version = "^0.4" }
serde = { version = "^1.0" }
serde_json = { version = "^1.0" }
jsonwebtoken = { version = "^7.2.0" }
http-types = { version = "^2.0" }
surf = { version = "^2.3.0" }
toml = { version = "^0.5" }
bson = { version = "2.0.0", features = ["uuid-0_8"] }
mongodb = { version = "^2.0.0", features = ["async-std-runtime", "bson-uuid-0_8"], default-features = false }
