[package]
name = "beetle-srv"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "beetle"
path = "src/lib.rs"

[[bin]]
name = "beetle-cli"
path = "src/bin/beetle-cli.rs"

[[bin]]
name = "beetle-registrar"
path = "src/bin/beetle-registrar.rs"

[[bin]]
name = "beetle-web"
path = "src/bin/beetle-web.rs"

[dependencies]
dotenv = { version = "^0.15", default-features = false }
env_logger = { version = "^0.9", default-features = false }
log = { version = "^0.4", default-features = false }
uuid = { version = "^1.0", features = ["v4"], default-features = false }
tide = { version = "^0.16", default-features = false, features = ["h1-server", "cookies"] }
async-std = { version = "^1.0", features = ["attributes"], default-features = false }
async-tls = { version = "^0.10", default-features = false, features = ["client"] }
kramer = { version = "^1.3.1", features = ["kramer-async", "acl"], default-features = false }
chrono = { version = "^0.4", features = ["std", "serde"] }
serde = { version = "^1.0", default-features = false, features = ["derive"] }
serde_json = { version = "^1.0", default-features = false }
jsonwebtoken = { version = "^7.2.0", default-features = false }
http-types = { version = "^2.0", default-features = false }
surf = { version = "^2.3.0", default-features = false, features = ["curl-client", "middleware-logger", "encoding"] }
toml = { version = "^0.5", default-features = false }
bson = { version = "2.0.0", features = ["uuid-0_8"], default-features = false }
mongodb = { version = "^2.0.0", features = ["async-std-runtime", "bson-uuid-0_8"], default-features = false }
