[package]
name = "beetle-mock"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
beetle-srv = { path = "../../src/beetle-srv" }
dotenv = { version = "^0.15", default-features = false }
env_logger = { version = "^0.9", default-features = false }
log = { version = "^0.4", default-features = false }
uuid = { version = "^1.0", features = ["v4"], default-features = false }
async-std = { version = "^1.0", features = ["attributes"], default-features = false }
async-tls = { version = "^0.10", default-features = false, features = ["client"] }
kramer = { version = "^3.0.0", features = ["kramer-async-read", "acl"], default-features = false }
chrono = { version = "^0.4", features = ["std", "serde"] }
serde = { version = "^1.0", default-features = false, features = ["derive"] }
serde_json = { version = "^1.0", default-features = false }
toml = { version = "^0.5", default-features = false }
clap = { version = "^4.0.0", features = ["derive"] }
iced = { version = "^0.9", features = ["glow"], default-features = false }
image = { version = "^0.24" }
anyhow = { version = "^1.0.71" }
url = { version = "^2.3.1" }

[features]
# Enabling this feature will allow developers to use a "naked" tcp stream for redis connections, instead of
# the default, which is to use `async_tls`.
redis-insecure = []

[patch.crates-io]
kramer = { git = "https://github.com/sizethree/kramer.git", branch = "async-read" }
